--- a/App.config
+++ b/App.config
@@ -1,6 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Microsoft.Samples.Kinect.CoordinateMappingBasics.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <userSettings>
+        <Microsoft.Samples.Kinect.CoordinateMappingBasics.Properties.Settings>
+            <setting name="Width" serializeAs="String">
+                <value>1440</value>
+            </setting>
+            <setting name="Height" serializeAs="String">
+                <value>0</value>
+            </setting>
+        </Microsoft.Samples.Kinect.CoordinateMappingBasics.Properties.Settings>
+    </userSettings>
 </configuration>
